# qa-bot

./: LICENSE  README.md  main.py  pyproject.toml  temp.py
app/: config.py  main.py  qa_processor.py
docs/chroma/: chroma.sqlite3
test-notebooks/: qa-bot.ipynb
